<resources>
    <string name="app_name">Toko Online</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_shopping">Shopping Cart</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shopping">Shopping</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="tv_search">Search Product…</string>
    <string name="product_name">Product Name</string>
    <string name="rp_0">Rp.0</string>
    <string name="best_seller">Product Best Seller</string>
    <string name="new_product">Product New Latest</string>
    <string name="product_electronic">Product Electronic</string>
    <string name="market_morning">Example Shop</string>
    <string name="welcome">Selamat Datang di</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or_login_with">or login with</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="img_phone">img_phone</string>
    <string name="img_log">img_log</string>
    <string name="img_google">img_google</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="ic_email">ic_email</string>
    <string name="ic_lock">ic_lock</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="ic_account">ic_account</string>
    <string name="logout">logout</string>
    <string name="profile">My profile</string>
    <string name="this_img_profile">this_img_profile</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="this_ic_notif">this_ic_notif</string>
    <string name="history">History</string>
    <string name="basket_list">Basket list</string>
    <string name="wish_list">Wish list</string>
    <string name="address_setting">Address setting</string>
    <string name="help">Help</string>
    <string name="verison_1_0_0">Version 1.0.0</string>
    <string name="log_out">Log out</string>
    <string name="img_detail">img_detail</string>
    <string name="rp">Rp.0</string>
    <string name="sku">SKU</string>
    <string name="weight">weight</string>
    <string name="_0_2kg">0.2kg</string>
    <string name="stock">Stock</string>
    <string name="_0">0</string>
    <string name="purchase_in_bulk_contact">Purchase in bulk contact</string>
    <string name="baren_pasaribu_gmail_com">baren@gmail.com</string>
    <string name="related_product">Related product</string>
    <string name="buy_now">Buy now</string>
    <string name="code_sku">L99ASD844</string>
    <string name="overview">Overview product</string>
    <string name="this_content">this content</string>
    <string name="this_img_cart">this_img_cart</string>
    <string name="this_img_bright">this_img_bright</string>
    <string name="_1">1</string>
</resources>