<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginVertical="1dp"
    android:layout_marginStart="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_product"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/product"
            android:contentDescription="@string/this_content" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="4dp"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="marquee"
            android:text="@string/product_name" />

        <TextView
            android:textColor="@color/orange"
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rp_0"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>